refactor(analysis)!: unify evidence collection and diagnostic stages
Collect structural and non-structural evidence in one post-graph pass, freeze report-safe anchors, and introduce command execution boundaries.

Standardize Stage/Phase logging, rename report cache and runtime metrics terms, and verify packaged Impact and Tree HTML.

BREAKING CHANGE: diagnostic lifecycle messages and the fifth prefix segment now expose Stage/Phase semantics; parsers must read phase from the fifth segment.